--- a/webapp/templates/linkedit_modal.html
+++ b/webapp/templates/linkedit_modal.html
@@ -8,7 +8,32 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>edit stuff goes here</p>
+                <form>
+                    <div class="form-group">
+                        <label for="link-bandwidth">Bandwidth</label>
+                        <input id="link-bandwidth" name="bandwidth" class="form-control" type="text">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="link-delay">Delay</label>
+                        <input id="link-delay" name="delay" class="form-control" type="text">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="link-loss">Loss</label>
+                        <input id="link-loss" name="loss" class="form-control" type="text">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="link-duplicate">Duplicates</label>
+                        <input id="link-duplicate" name="duplicate" class="form-control" type="text">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="link-jitter">Jitter</label>
+                        <input id="link-jitter" name="jitter" class="form-control" type="text">
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button id="linkedit-button" type="button" class="btn btn-primary">Edit</button>
