web app update to attempt to re-use deleted node ids

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -116,8 +116,12 @@
 
 <div id="node-context" class="list-group context d-none">
     <button type="button" class="list-group-item list-group-item-action" href="#" data-option="edit">Edit Node</button>
-    <button type="button" class="list-group-item list-group-item-action" href="#" data-option="services">Services</button>
-    <button type="button" class="list-group-item list-group-item-action" href="#" data-option="delete">Delete</button>
+    <button id="node-linkrf-button" type="button" class="list-group-item list-group-item-action d-none" href="#"
+            data-option="linkrf">Link All Routers</button>
+    <button type="button" class="list-group-item list-group-item-action" href="#"
+            data-option="services">Services</button>
+    <button id="node-delete-button" type="button" class="list-group-item list-group-item-action" href="#"
+            data-option="delete">Delete</button>
 </div>
 
 <div id="edge-context" class="list-group context d-none">
