web app added toast library for notificatios

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,6 +5,7 @@
     <title>CORE</title>
     <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="static/vis.min.css">
+    <link rel="stylesheet" type="text/css" href="static/toastr.min.css">
     <link rel="stylesheet" type="text/css" href="static/core.css">
 </head>
 <body>
@@ -132,6 +133,7 @@
 <script src="static/popper.min.js"></script>
 <script src="static/bootstrap.min.js"></script>
 <script src="static/vis.min.js"></script>
+<script src="static/toastr.min.js"></script>
 <script src="static/socket.io.js"></script>
 <script src="static/coreip.js"></script>
 <script src="static/corerest.js"></script>
