web app updated node context to use async

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -245,7 +245,10 @@
 
         const nodeId = coreNetwork.network.getNodeAt(location);
         if (nodeId) {
-            nodeContext.show(nodeId, x, y);
+            nodeContext.show(nodeId, x, y)
+                    .catch(function(err) {
+                        console.log('error showing node context: ', err);
+                    });
         } else {
             const edgeId = coreNetwork.network.getEdgeAt(location);
             if (edgeId) {
